Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body {
 div {
 width: 700px;
 margin: auto;
-font-family: "he"
+font-family: "Helvetica Neue"
+background-color: : #fff;
+padding: 30px;
 }
 
 /* ID selector to select the element with id 'main-header' */
