--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
 div {
-  background-color: white;
+  background-color: #;
   padding: 30px;
 width: 700px;
 margin: auto;
